chore: streamline OAuth-Sheriff test library usage (#139)
## Summary

- **Delete** `SimpleAccessTokenContent.java` (99 lines) — redundant test
helper replaced by `AccessTokenContent` constructor with proper
`ClaimValue` types
- **Add** tampered token security tests using `JwtTokenTamperingUtil`
(all 8 `TamperingStrategy` values + 5 named tests for critical attack
vectors)
- **Add** `@TestTokenSource` parameterized tests replacing manual token
loops
- **Fix** defensive bug in `AuthorizationValidator`: extract
scopes/roles only when required by config (avoids
`IllegalStateException` on tokens missing the respective claim)

### Test impact
- 174 total tests, all passing (net +11 new tests)
- New `TamperedTokenTests` nested class: 13 tests covering signature
corruption, algorithm "none" attack, unsigned tokens, invalid key ID,
different signature
- `@TestTokenSource(count = 5)` parameterized test replaces manual
3-iteration loop

## Test plan
- [x] `./mvnw -Ppre-commit clean install -DskipTests` — quality checks
pass
- [x] `./mvnw clean install` — all 174 tests pass
- [x] No remaining references to `SimpleAccessTokenContent`

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-authored-by: Oliver Wolff <23139298+cuioss@users.noreply.github.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>